# habsat3

./: Cargo.toml  flake.nix  justfile
.cargo/: config.toml
apps/air/: Cargo.toml
apps/air/migrations/0_create_db/: down.sql  up.sql
apps/air/src/: camera.py  camera.rs  heartbeat.rs  main.rs  sensor_tasks.rs  tape_control.rs  types.rs
apps/air/src/db/: mod.rs  models.rs  schema.rs
apps/air/src/sensor_tasks/: as7341_task.rs  bmp280_task.rs  bno_task.rs  lora_task.rs  system_stats_task.rs  tel0157_task.rs  utils.rs
apps/bno-calibrate/: Cargo.toml
apps/bno-calibrate/src/: main.rs
apps/common/: Cargo.toml
apps/common/src/: lib.rs
apps/lora-listener/: Cargo.toml
apps/lora-listener/src/: main.rs
misc/: air.service
platform/as7341/: Cargo.toml
platform/as7341/src/: lib.rs
platform/bmp280/: Cargo.toml
platform/bmp280/src/: lib.rs
platform/bno-055/: Cargo.toml
platform/bno-055/src/: lib.rs
platform/lora/: Cargo.toml
platform/lora/src/: lib.rs
platform/system-sensors/: Cargo.toml
platform/system-sensors/src/: lib.rs
platform/tape/: Cargo.toml
platform/tape/src/: lib.rs
platform/tel0157/: Cargo.toml
platform/tel0157/src/: lib.rs
src/: main.rs
