[package]
name = "air"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
tower-http = { version = "0.6", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kanal = "0.1.1"
uom = "0.37.0"
i2cdev = "0.6.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3.31"
libcamera = "0.6.0"
turbojpeg = "1.3.3"

diesel = { version = "2.3.5", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3.1"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }

bno-055 = { path = "../../platform/bno-055/" }
tel0157 = { path = "../../platform/tel0157/"}
system-sensors = { path = "../../platform/system-sensors/" }
